--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -4,8 +4,8 @@
     description: Tests compatibility with master branch of jenkins-job-builder
     parent: tox-py27
     required-projects:
-      - openstack/python-jenkins
-      - openstack-infra/jenkins-job-builder
+      - jjb/python-jenkins
+      - jjb/jenkins-job-builder
     voting: true
 
 - project:
